--- a/src/app/ourservices/ourservices.component.html
+++ b/src/app/ourservices/ourservices.component.html
@@ -1,1 +1,25 @@
-<p>ourservices works!</p>
+<div class="container">
+
+  <h1>Comment Form</h1>
+
+<div class="form-wrapper">
+  <form class="form" [formGroup]="commentForm">
+      <div class="form-group">
+          <label for="name" class="form-label">Name: </label>
+          <input type="text" class="form-control" id="name" formControlName="name" required>
+      </div>
+      <div class="form-group">
+          <label for="email" class="form-label">Email: </label>
+          <input type="text" class="form-control" id="email" formControlName="email">
+      </div>
+      <div class="form-group">
+          <label for="message" class="form-label">Comment: </label>
+          <textarea name="" id="comment" rows="10" cols="20" class="form-control" formControlName="body"></textarea>
+      </div>
+      <div class="form-group">
+          <button class="input-btn" (click)="submitCommentForm(commentForm)" [disabled]=!commentForm >Submit</button>
+      </div>
+  </form>
+</div>
+
+</div>
